fixing unsent notif
